; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/dvm/extr_main.c_iwlagn_send_calib_cfg_rt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/dvm/extr_main.c_iwlagn_send_calib_cfg_rt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_priv = type { i32 }
%struct.iwl_calib_cfg_cmd = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }
%struct.iwl_host_cmd = type { i32, i32, i32 }

@CALIBRATION_CFG_CMD = common dso_local global i32 0, align 4
@IWL_CALIB_RT_CFG_ALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iwl_priv*, i32)* @iwlagn_send_calib_cfg_rt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwlagn_send_calib_cfg_rt(%struct.iwl_priv* %0, i32 %1) #0 {
  %3 = alloca %struct.iwl_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.iwl_calib_cfg_cmd, align 4
  %6 = alloca %struct.iwl_host_cmd, align 4
  store %struct.iwl_priv* %0, %struct.iwl_priv** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds %struct.iwl_host_cmd, %struct.iwl_host_cmd* %6, i32 0, i32 0
  %8 = ptrtoint %struct.iwl_calib_cfg_cmd* %5 to i32
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds %struct.iwl_host_cmd, %struct.iwl_host_cmd* %6, i32 0, i32 1
  store i32 8, i32* %9, align 4
  %10 = getelementptr inbounds %struct.iwl_host_cmd, %struct.iwl_host_cmd* %6, i32 0, i32 2
  %11 = load i32, i32* @CALIBRATION_CFG_CMD, align 4
  store i32 %11, i32* %10, align 4
  %12 = call i32 @memset(%struct.iwl_calib_cfg_cmd* %5, i32 0, i32 8)
  %13 = load i32, i32* @IWL_CALIB_RT_CFG_ALL, align 4
  %14 = getelementptr inbounds %struct.iwl_calib_cfg_cmd, %struct.iwl_calib_cfg_cmd* %5, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  store i32 %13, i32* %16, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @cpu_to_le32(i32 %17)
  %19 = getelementptr inbounds %struct.iwl_calib_cfg_cmd, %struct.iwl_calib_cfg_cmd* %5, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i32 %18, i32* %21, align 4
  %22 = load %struct.iwl_priv*, %struct.iwl_priv** %3, align 8
  %23 = call i32 @iwl_dvm_send_cmd(%struct.iwl_priv* %22, %struct.iwl_host_cmd* %6)
  ret i32 %23
}

declare dso_local i32 @memset(%struct.iwl_calib_cfg_cmd*, i32, i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @iwl_dvm_send_cmd(%struct.iwl_priv*, %struct.iwl_host_cmd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
